[metadata]
name = pip-sync-faster
description = A wrapper that makes pip-sync faster.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hypothesis/pip-sync-faster
project_urls =
    Bug Tracker = https://github.com/hypothesis/pip-sync-faster/issues
    Changelog = https://github.com/hypothesis/pip-sync-faster/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    importlib_metadata;python_version<"3.8."
    pip-tools
    importlib_metadata;python_version<"3.8."

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pip-sync-faster = pip_sync_faster.cli:cli

[pycodestyle]
ignore =
    # Disable pycodestyle errors and warnings that we don't care about because
    # Black formats our code for us.
    E203,  # Whitespace before ':',
    E231,  # Missing whitespace after ',',
    E501,  # Line too long,
    W503,  # Line break before binary operator,

    # "Comparison to None should be 'if cond is None:'.
    # PyLint finds these so we don't need pycodestyle to.
    E711,

    # Bare except. PyLint finds these for us so we don't need pycodestyle to.
    E722,
